# aoc-2023

./: .gitignore  .pre-commit-config.yaml
aoc/: Cargo.toml
aoc/src/: main.rs
aoc/src/commands/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day4part1.rs  day5.rs  day5part1.rs  day8.rs  day9.rs  mod.rs
