[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0.29", features=["derive"]}
enum_dispatch = "0.3.8"
regex = "1.7.0"
strum = "0.24.1"
strum_macros = "0.24.3"
queues = "1.0.2"
nom = "7.1.1"
itertools = "0.10.5"
glam = "0.22.0"
