[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.8", features=["derive"]}
enum_dispatch = "0.3.12"
regex = "1.10.2"
strum = "0.25.0"
strum_macros = "0.25.3"
queues = "1.1.0"
nom = "7.1.3"
itertools = "0.12.0"
glam = "0.24.2"
serde = { version = "1.0.193", features = ["derive"] }
csv = "1.3.0"
intersection = "1.0.0"
